--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,10 +1,21 @@
-.grey {
+html {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.wrapper {
   background-color: rgb(246, 245, 239);
+  margin: 0;
+  padding: 0;
 } 
 h1 { color: burlywood; font-family: 'Trocchi', serif; font-size: 45px; font-weight: normal; line-height: 48px; margin: 0; }
 
-h3 { color: #7c795d; font-family: 'Source Sans Pro', sans-serif; font-size: 20px; font-weight: 400; line-height: 32px; margin: 0 0 24px; }
+h3 { color: #7c795d; font-family: 'Source Sans Pro', sans-serif; font-size: 20px; font-weight: 400; line-height: 28px; margin: 0 0 8px; }
 
-li { color: #7c795d; font-family: 'Source Sans Pro', sans-serif; font-size: 15px; font-weight: 400; margin: 0 0 24px; display:block; margin:0;}
+h4 { color: #7c795d; font-family: 'Source Sans Pro', sans-serif; font-size: 15px; font-weight: 400; line-height: 20px; margin: 0 0 8px; }
 
-label { color: #7c795d; font-family: 'Source Sans Pro', sans-serif; font-size: 15px; font-weight: 400; line-height: 32px; margin: 0 0 24px; }
+li { color: #7c795d; font-family: 'Source Sans Pro', sans-serif; font-size: 15px; font-weight: 400; margin: 0 0 8px; display:block; margin:0;}
+
+label { color: #7c795d; font-family: 'Source Sans Pro', sans-serif; font-size: 15px; font-weight: 400; line-height: 20px; margin: 0 0 8px; }
+
